--- a/Horse_vs_Zebra_Transfer.ipynb
+++ b/Horse_vs_Zebra_Transfer.ipynb
@@ -1310,7 +1310,175 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Epoch 11: 100%|█████████▉| 1332/1334 [03:43<00:00,  6.21it/s]"
+            "Epoch 11: 100%|██████████| 1334/1334 [03:43<00:00,  5.96it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==> Saved checkpoint.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 12: 100%|██████████| 1334/1334 [03:44<00:00,  5.94it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==> Saved checkpoint.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 13: 100%|██████████| 1334/1334 [03:44<00:00,  5.95it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==> Saved checkpoint.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 14: 100%|██████████| 1334/1334 [03:44<00:00,  5.95it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==> Saved checkpoint.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 15: 100%|██████████| 1334/1334 [03:44<00:00,  5.93it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==> Saved checkpoint.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 16: 100%|██████████| 1334/1334 [03:44<00:00,  5.94it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==> Saved checkpoint.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 17: 100%|██████████| 1334/1334 [03:45<00:00,  5.92it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==> Saved checkpoint.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 18: 100%|██████████| 1334/1334 [03:45<00:00,  5.93it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==> Saved checkpoint.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 19: 100%|██████████| 1334/1334 [03:45<00:00,  5.92it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==> Saved checkpoint.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 20: 100%|██████████| 1334/1334 [03:44<00:00,  5.93it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==> Saved checkpoint.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 21: 100%|██████████| 1334/1334 [03:45<00:00,  5.91it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==> Saved checkpoint.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 22: 100%|██████████| 1334/1334 [03:44<00:00,  5.94it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==> Saved checkpoint.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Epoch 23:  41%|████      | 547/1334 [01:32<02:06,  6.21it/s]"
           ]
         }
       ]
